2013-09-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Better handling of annotations and bookmarks.
	* src/pdfdoc.[ch], src/spc_pdfm.c: Undo change from 2013-08-08.
	* src/pdfobj.c: Remember to whom indirect objects refer.

	* (x)dvipdfm-ann.test: Adapted to analog tests in ../dvipdfm-x.
	Use compression level 0.
	* (x)dvipdfmx.test: Adapted to analog tests in ../dvipdfm-x.

	* *.test: Sanitize environment variables (from Akira).

	* (x)dvipdfm-bkm.test: Additional tests with bookmarks.
	* tests/bookm.{dvi,tex}: Additional test input files.
	* (x)dvipdfm-res.test: Additional test with resources.
	* tests/resrc.{dvi,tex}: Additional test input files.
	* Makefile.am: Adapted.

2013-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Better handling of annotations and bookmarks.
	* src/pdfdoc.[ch], src/spc_pdfm.c: Undo change from 2013-08-08.
	* src/pdfnames.c (pdf_names_lookup_reference): 	Replace
	pdf_ref_obj() => pdf_link_obj().

2013-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xsrc/epdf.c (add_stream_flate): Use z_const.
	* (x)src/pdfobj.c (pdf_add_stream_flate): Use z_const.

2013-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dvipdfmx.c, src/pdfdoc.[ch], src/spc_pdfm.c,
	src/spc_util.c: Bug fix: handle pdf:bann, pdf:eann, and pdf:ann
	specials.

2013-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dvipdfmx.h, xsrc/spc_xtx.[ch]: Moved to the top-level.
	* Moved these files (identical in src/ and xsrc/) to the
	top-level: agl.[ch], bmpimage.h, cff_dict.h, cff_limits.h,
	cff_stdstr.h, cff_types.h, cid.[ch], cid_basefont.h, cid_p.h,
	cidtype0.h, cidtype2.h, cmap.[ch], cmap_p.h, cmap_read.[ch],
	cmap_write.[ch], cs_type2.[ch], dpxconf.[ch], dpxcrypt.[ch],
	dvicodes.h, mem.[ch], mfileio.[ch], mpost.h, numbers.[ch],
	otl_conf.[ch], otl_opt.[ch], pdfencoding.[ch], pdfencrypt.h,
	pdffont.[ch], pdflimits.h, pdfparse.h, pdfresource.[ch],
	pkfont.[ch], pst.[ch], pst_obj.[ch], sfnt.h, spc_color.h,